--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="manifest" href="manifest.json" />
+<link rel="manifest" href="manifest.json" />
+<meta name="theme-color" content="#000000" />>
 <title>Catch Cards Memories & Tallies</title>
 
 <style>
@@ -481,6 +484,14 @@
     renderPhotoPosts();
     initFishList();
   })();
+
+  if ('serviceWorker' in navigator) {
+  window.addEventListener('load', () => {
+    navigator.serviceWorker.register('./sw.js')
+      .then(reg => console.log('SW registered:', reg.scope))
+      .catch(err => console.error('SW failed:', err));
+  });
+}
 </script>
 
 </body>
