--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="manifest" href="manifest.json" />
 <link rel="manifest" href="manifest.json" />
 <meta name="theme-color" content="#000000" />>
-<title>Catch Cards Memories & Tallies</title>
+<title>Fishin' Buddy</title>
 
 <style>
   body, html {
